--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Test leht</title>
+  <title>Ilmaleht</title>
   <link rel="stylesheet" href="css%20reset.css">
   <link rel="stylesheet" href="style.css">
   <script src="scripts.js"></script>
@@ -12,8 +12,9 @@
 <div id="kell"></div>
 <div id="kuupäev"></div>
 <div id="ilm"></div>
-<video autoplay muted loop id="vihmVideo">
-  <source src="Meedia/Lumi%20video.mp4" type="video/mp4">
+<!--Patrick Miskiewicz Beautiful Bayfield Sunset Video Loop-->
+<video autoplay muted loop id="sunsetVideo">
+  <source src="Meedia/sunset.mp4" type="video/mp4">
 </video>
 </body>
 </html>
