--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
 <div id="kell"></div>
 <div id="kuupäev"></div>
 <div id="ilm"></div>
-<!--Patrick Miskiewicz Beautiful Bayfield Sunset Video Loop-->
-<video autoplay muted loop id="sunsetVideo">
-  <source src="Meedia/sunset.mp4" type="video/mp4">
-</video>
+<div class="video-container">
+  <!--background video from https://www.youtube.com/watch?v=8KjSBnhfZTw-->
+  <img src="Meedia/backupBackground.png" alt="Background">
+  <video autoplay muted loop width="2560" height="1350">
+    <source src="Meedia/Trees-in-fog.mp4" type="video/mp4">
+  </video>
+</div>
 </body>
 </html>
